# goalNeuralCA

./: .gitignore  README.md  evaluate.py  pyproject.toml  train.py
NCAs/: NCA_mlp.py  __init__.py  utils.py  visualisation_functions.py
results/multiplexing/20260214_141942/: best_loss_vs_n.csv  completed_runs.yml  experiment_config.yml  mean_loss_vs_epoch.csv  run_manifest.yml
results/pattern_translation/FAIL-wholly-calm-badger/: _config.yml  best_model.pth  checksum_l1_distances_eval_jcuqt3cq.npy  checksum_l1_distances_jcuqt3cq.npy  config_og.yml  eval_config.yml  gradient_magnitudes_jcuqt3cq.npy  initial_seeds.pt  model_config.yml  targets.pt  training_learning_rates_jcuqt3cq.npy  training_losses_jcuqt3cq.npy
results/pattern_translation/easily-boss-grouse/: _config.yml  best_model.pth  checksum_l1_distances_eval_lly7qbhx.npy  checksum_l1_distances_lly7qbhx.npy  config_og.yml  eval_config.yml  gradient_magnitudes_lly7qbhx.npy  initial_seeds.pt  model_config.yml  targets.pt  training_learning_rates_lly7qbhx.npy  training_losses_lly7qbhx.npy
results/pattern_translation/fully-witty-marmot/: _config.yml  checksum_l1_distances_3yc7rhe1.npy  checksum_l1_distances_eval_3yc7rhe1.npy  config_og.yml  eval_config.yml  gradient_magnitudes_3yc7rhe1.npy  initial_seeds.pt  model_config.yml  targets.pt  (+2 more)
src/datasets/: pattern_dataset.py
src/experiments/: CLAUDE.md  multiplexing.py
src/trainers/: trainer.py
src/utils/: image_processing.py  image_processing_openai.py  utils.py  utils_plotting.py
src/visualisation/: visualisation_functions.py  viz.py
(+166 files in other folders)
